--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
+
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Fira Code', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 12px;
     max-width: 960px;
     margin: auto;
 }
+
 h1 {
     font-size: 3em;
     letter-spacing: .6em;
@@ -26,6 +28,7 @@ main {
     grid-template-columns: 40% 60%;
     margin-top: 3em;
 }
+
 header {
     text-align: center;
     margin: auto 2em;
